force-app/main/default/objects/Sanlam_Claim_Document__c/Sanlam_Claim_Document__c.object-meta.xml
<CustomObject>
    <description>Metadata table to map documents received and issued against a C Claim and BC Claim</description>
    <label>Documents</label>
    <nameField>
        <label>Claims Document Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>