force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>