force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Ad_Hoc_Message__c.field-meta.xml
<CustomField>
    <fullName>Ad_Hoc_Message__c</fullName>
    <label>Ad Hoc Message</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>