force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Benefit_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Claimed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Claimed</label>
    <referenceTo>cve__BenefitClaimed__c</referenceTo>
    <relationshipName>Benefit_Claimed</relationshipName>
    <type>Lookup</type>
</CustomField>