force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Call_WIV_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_WIV_Duration__c</fullName>
    <label>Call/WIV Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>