force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Called_From__c.field-meta.xml
<CustomField>
    <fullName>Called_From__c</fullName>
    <label>Called From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>