force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Claim_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Claim_Contact_Last_Name__c</fullName>
    <label>Claim Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>