force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Claim_Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Contact_Mobile_Number__c</fullName>
    <label>Claim Contact Mobile Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>