force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Number</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipName>Claim_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>