force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Claims_Channel__c.field-meta.xml
<CustomField>
    <fullName>Claims_Channel__c</fullName>
    <label>Claims Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Death</fullName>
                <label>death</label>
            </value>
            <value>
                <fullName>Living Benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>