force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Communication_Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Communication_Template_Code__c</fullName>
    <label>Communication Template Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>