force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>