force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Contact_History_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_History_Unique_ID__c</fullName>
    <label>Contact History Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>