force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Content_Navigator_Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>Content_Navigator_Link_Formula__c</fullName>
    <formula>Sanlam_Document_URL__c  +  Document_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Navigator Link</label>
    <type>Text</type>
</CustomField>