force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Date_Received_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_Issued__c</fullName>
    <label>Date Received /Issued</label>
    <type>DateTime</type>
</CustomField>