force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Description__c</fullName>
    <label>Document Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>