force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <externalId>true</externalId>
    <label>Content Manager ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>