force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Document Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>