force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>