force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>