force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Claim</fullName>
            </value>
            <value>
                <fullName>Existing Claim</fullName>
            </value>
            <value>
                <fullName>Terminally ill</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>