force-app/main/default/objects/Sanlam_Claim_Document__c/fields/FailedErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>FailedErrorMessage__c</fullName>
    <label>Failed or Error Message</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>