force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>