force-app/main/default/objects/Sanlam_Claim_Document__c/fields/From_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Fax_Number__c</fullName>
    <label>From Fax Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>