force-app/main/default/objects/Sanlam_Claim_Document__c/fields/KTA_code__c.field-meta.xml
<CustomField>
    <fullName>KTA_code__c</fullName>
    <label>Kofax (KTA) Document Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>