force-app/main/default/objects/Sanlam_Claim_Document__c/fields/kta_User_ID__c.field-meta.xml
<CustomField>
    <fullName>kta_User_ID__c</fullName>
    <label>KTA User ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>