force-app/main/default/objects/Sanlam_Claim_Document__c/fields/KTA_User_Name__c.field-meta.xml
<CustomField>
    <fullName>KTA_User_Name__c</fullName>
    <label>KTA User Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>