force-app/main/default/objects/Sanlam_Claim_Document__c/fields/KTA_User_Note__c.field-meta.xml
<CustomField>
    <fullName>KTA_User_Note__c</fullName>
    <label>KTA User Note</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>