force-app/main/default/objects/Sanlam_Claim_Document__c/fields/ktaBatch_ID__c.field-meta.xml
<CustomField>
    <fullName>ktaBatch_ID__c</fullName>
    <label>KTA Batch ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>