force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <formula>IF(Language_Code__c = 1, &apos;English&apos;,  IF(Language_Code__c = 2, &apos;Afrikaans&apos;, &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>