force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <label>Language Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>