force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <label>Object ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>