force-app/main/default/objects/Sanlam_Claim_Document__c/fields/On_Demand_Id__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Id__c</fullName>
    <externalId>true</externalId>
    <label>On Demand Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>