force-app/main/default/objects/Sanlam_Claim_Document__c/fields/OnDemand_Details__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Details__c</fullName>
    <label>OnDemand  Details</label>
    <length>150</length>
    <type>Text</type>
</CustomField>