force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>New Service Request</fullName>
            </value>
            <value>
                <fullName>New Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>