force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Outcome_Category__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Category__c</fullName>
    <label>Outcome Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>