force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <label>Plan Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>