force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Number</label>
    <referenceTo>cve__Policy__c</referenceTo>
    <relationshipName>Claim_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>