force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Sanlam_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Sanlam_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>