force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Sanlam_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Sanlam_Document_Name__c</fullName>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>