force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Sanlam_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Sanlam_Document_URL__c</fullName>
    <label>Content Navigator Link</label>
    <type>Url</type>
</CustomField>