force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Sanlam_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Sanlam_Member_ID__c</fullName>
    <label>Member ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>