force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Source_Email__c.field-meta.xml
<CustomField>
    <fullName>Source_Email__c</fullName>
    <label>Source Email</label>
    <type>Email</type>
</CustomField>