force-app/main/default/objects/Sanlam_Claim_Document__c/fields/srNumber__c.field-meta.xml
<CustomField>
    <fullName>srNumber__c</fullName>
    <label>SR#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>