force-app/main/default/objects/Sanlam_Claim_Document__c/fields/Voice_Recording_Reference__c.field-meta.xml
<CustomField>
    <fullName>Voice_Recording_Reference__c</fullName>
    <label>Voice Recording Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>